--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
             </div>
             <div class="col-6 col-md-4" >
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#web-development">
-                  <figure class="cc-effect"><img src="images/cover uiux.png" alt="Image"/>
+                  <figure class="cc-effect"><img src="" alt="Image"/>
                     <figcaption>
                       <p>Academic Projects</p>
                     </figcaption>
