--- a/acproject.html
+++ b/acproject.html
@@ -66,147 +66,105 @@
     </div>
   </div>
 </div>
-<div class="section" id="uiux1">
+<div class="section" id="academic">
   <div class="container">
     <div class="row">
       <div class="col-md-6 ml-auto mr-auto">
-        <div class="h4 text-center mb-4 title">OrganizeMe : To-Do List</div>
+        <div class="h4 text-center mb-4 title">Title: The Development of Rebong Bakery Ordering System (Final Year Project) (2022)</div>
       </div>
     </div>
     <div class="row" data-aos="zoom-in">
       <div data-aos="zoom-in">
         <h5>The Product</h5>
         <p style="padding-bottom: 5%;"> 
-          OrganizeMe is a simple app that helps you create and manage to-do lists for all your tasks.
+          To develop a bakery ordering system that allows customers to place orders without having to visit the bakery using a website.
         </p>
       </div>
       <div data-aos="zoom-in">
         <h5>The Brief</h5>
         <p>
-          I am a busy person who tries to remember everything, including meetings and house chores. Sometimes when I get distracted by something, it is easy for me to forget the important things. Even though I have written reminders on paper, I still cannot remember what should I do when I arrive home. To keep reminding me of the tasks, I use the Notes on my phone. However, the Notes application cannot remind me if I have already done the tasks or not. The app is only for writing down tasks; it doesn't provide reminders. 
-        </p>
-        <img src="images/list before.jpg" style="width:30%; display: block; margin-left: auto; margin-right: auto;">
-        <p style="text-align: center; font-size: 12px;">My phone’s Notepad to-do list feature interface. </p>
-        <p>
-          I downloaded several apps promising to help me create to-do lists and organize my life. However, I found myself either struggling to understand how to use the application or getting distracted by the additional features the apps offered beyond basic to-do functionality.
-        </p>
-        <p>
-          I decided to design a To-do list app that:
-          <ol style="padding-bottom: 5%;">
-            <li>
-              Extremely user-friendly.
-            </li>
-            <li>
-              Easy to understand.
-            </li>
-            <li>
-              Allows me to set reminders for every task.
-            </li>
-            <li>
-              Enable me to create a To-do list for other days.
-            </li>
-          </ol>
-        </p>
-      </div>
-      <div data-aos="zoom-in">
-        <h5>Design Solution</h5>
-        <h6>Sketching</h6>
-        <p>
-          Before I started designing on Figma, I sketched down a design solution using a pen and paper, So I could easily figure out how to begin my design on Figma. With a simple design, I fit in the solution that I have come up with in one paper. 
-        </p>
-        <img src="images/sketch.jpg" style="width:30%; display: block; margin-left: auto; margin-right: auto;">
-        <p style="text-align: center; font-size: 12px;">
-          Sketches of the to-do list app.
-        </p>
-        <h6>Wireframe</h6>
-        <p>
-          After sketching the design that I wanted, I jumped on Figma and designed wireframes with more detail and structure. After that, I focused more on colours and images to make the design more realistic.
+            <ul>
+                <li>
+                    A final-year project for the degree.
+                </li>
+                <li>
+                    Developed a web-based ordering system using HTML, CSS, PHP, and JavaScript. Also utilized MySQL as the database.
+                </li>
+                <li>
+                    Collaborated with the owner of Rebong Bakery to develop the system for staff and customers.
+                </li>
+                <li>
+                    All requirements were documented in a Software Requirement Specification and Software Design Document to ensure the success
+of the entire development process.
+                </li>
+                <li>
+                    The system included a comprehensive catalog of products or services, providing detailed information such as descriptions, prices,
+and available quantities.
+                </li>
+                <li>
+                    The system instigated the order processing workflow, encompassing the verification of product availability, confirmation of
+pricing, and computation of the total cost, inclusive of taxes and shipping fees.
+                </li>
+            </ul>
         </p>
       </div>
-      <div class="col-sm-6">
-        <img src="images/wireframe1.png" style="width:100%;">
-      </div>
-      <div class="col-sm-6">
-        <img src="images/wireframe2.png" style="width:100%;">
-      </div>
-      <div>
-        <h6>Final Design</h6>
-      </div>
-    </div>
-    <div class="row" data-aos="zoom-in">
-      <div class="col-sm-6">
-        <img src="images/ui (1).jpg" style="width:100%">
-      </div>
-      <div class="col-sm-6">
-        <img src="images/ui (2).jpg" style="width:100%">
-      </div>
-    </div>
-    <div class="row" data-aos="zoom-in">
+        <div class="row" data-aos="zoom-in">
         <div class="col-sm-6">
-          <img src="images/ui (3).jpg" style="width:100%">
+            <img src="images/ui (1).jpg" style="width:100%">
         </div>
         <div class="col-sm-6">
-          <img src="images/ui (4).jpg" style="width:100%">
+            <img src="images/ui (2).jpg" style="width:100%">
         </div>
-    </div>
-    <div class="row" data-aos="zoom-in">
-        <div class="col-sm-6">
-          <img src="images/ui (5).jpg" style="width:100%">
         </div>
-        <div class="col-sm-6">
-          <img src="images/ui (6).jpg" style="width:100%">
+        <div class="row" data-aos="zoom-in">
+            <div class="col-sm-6">
+            <img src="images/ui (3).jpg" style="width:100%">
+            </div>
+            <div class="col-sm-6">
+            <img src="images/ui (4).jpg" style="width:100%">
+            </div>
         </div>
-    </div>
-    <div class="row" data-aos="zoom-in">
-      <div class="col-sm-6" style="padding-bottom: 5%;">
-        <img src="images/ui (7).jpg" style="width:100%">
-      </div>
-    </div>
-    <div class="row" data-aos="zoom-in">
-      <div>
-        <h6>Conclusion</h6>
-        <p>
-          This design has taught me how to create a product that meets specific needs. 
-          There were moments when I wanted to add extra features that I thought I might need, but by sticking to my original goals and paying attention to how I used the app, I stayed true to the actual plan. 
-          Through this design, I learned how to make a plan by sketching the design before jumping to the wireframe. 
-          If I could redesign any apps based on other users' perspectives and needs, I would interview potential users (which is User Research), create a persona, and design a solution based on the information I gathered from the research.
-        </p>
-        <h6>Tools</h6>
-        <p>
-          <ol>
-            <li>
-              Figma (wireframing and designing)
-            </li>
-          </ol>
-        </p>
-        <h6>Responsibilites</h6>
-        <p>
-          <ol>
-            <li>
-              Strategy
-            </li>
-            <li>
-              Information Architecture
-            </li>
-            <li>
-              Design, UI/UX
-            </li>
-          </ol>
-        </p>
-        <h6>Role</h6>
-        <p>
-          <ol>
-            <li>
-              User
-            </li>
-            <li>
-              Product Designer
-            </li>
-          </ol>
-        </p>
-      </div>
-    </div>
-
+        <div class="row" data-aos="zoom-in">
+            <div class="col-sm-6">
+            <img src="images/ui (5).jpg" style="width:100%">
+            </div>
+            <div class="col-sm-6">
+            <img src="images/ui (6).jpg" style="width:100%">
+            </div>
+        </div>
+        <div class="row" data-aos="zoom-in">
+        <div class="col-sm-6" style="padding-bottom: 5%;">
+            <img src="images/ui (7).jpg" style="width:100%">
+        </div>
+        </div>
+        <div class="row" data-aos="zoom-in">
+        <div>
+            <h6>Conclusion</h6>
+            <p>
+                In conclusion, the development of the Rebong Bakery Ordering System successfully addresses the challenges faced by the bakery in its manual order management processes. The system effectively achieves the objectives of identifying requirements, designing a functional web-based application, and developing an ordering platform tailored to the needs of both customers and staff. By leveraging the Waterfall Model methodology, the project ensures a systematic approach from planning to implementation, resulting in a user-friendly interface and improved operational efficiency.
+            </p>
+            <p>
+                The system simplifies the ordering process for customers by enabling them to browse products, customize orders, and receive updates on their order status online. Additionally, it benefits the staff by organizing order management and customer information within a centralized database, reducing human errors and enhancing workflow efficiency.
+            </p>
+            <h6>Operating Environment</h6>
+            <p>
+                <li style="list-style-type: none;"><strong>Tools</strong> : Visual Studio Code.</li>
+                <li style="list-style-type: none;"><strong>Database</strong> : MySQL.</li>
+                <li style="list-style-type: none;"><strong>Programming Languages</strong> : PHP, JavaScript, HTML</li>
+            </p>
+            <h6>Role</h6>
+            <p>
+            <ol>
+                <li>
+                Customer
+                </li>
+                <li>
+                Admin
+                </li>
+            </ol>
+            </p>
+        </div>
+        </div>
   </div>
 </div>
 
