--- a/index.html
+++ b/index.html
@@ -227,12 +227,14 @@
               </div>  
             </div>
             <div class="col-6 col-md-4" >
-              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#web-development">
+              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
+                <a href="acproject.html#academic">
                   <figure class="cc-effect"><img src="images/cover academic projects.png" alt="Image"/>
                     <figcaption>
                       <p>Academic Projects</p>
                     </figcaption>
-                  </figure></a>
+                  </figure>
+                </a>
               </div>
             </div>
             <!--div class="col-6 col-md-4">
