--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
             </div>
             <div class="col-6 col-md-4" >
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
-                <a href="acproject.html#academic">
+                <a href="acproject1.html">
                   <figure class="cc-effect"><img src="images/cover academic projects.png" alt="Image"/>
                     <figcaption>
                       <p>Academic Projects</p>
