--- a/acproject.html
+++ b/acproject.html
@@ -109,33 +109,34 @@ pricing, and computation of the total cost, inclusive of taxes and shipping fees
         </p>
       </div>
         <div class="row" data-aos="zoom-in">
-        <div class="col-sm-6">
-            <img src="images/ui (1).jpg" style="width:100%">
-        </div>
-        <div class="col-sm-6">
-            <img src="images/ui (2).jpg" style="width:100%">
-        </div>
-        </div>
-        <div class="row" data-aos="zoom-in">
-            <div class="col-sm-6">
-            <img src="images/ui (3).jpg" style="width:100%">
-            </div>
-            <div class="col-sm-6">
-            <img src="images/ui (4).jpg" style="width:100%">
-            </div>
+          <div class="col-sm-6">
+              <img src="images/Rebong Bakery's Website UI Design_page-0001.jpg" style="width:100%">
+          </div>
+          <div class="col-sm-6" data-aos="zoom-in">
+              <img src="images/Rebong Bakery's Website UI Design_page-0002.jpg" style="width:100%">
+          </div>
         </div>
         <div class="row" data-aos="zoom-in">
             <div class="col-sm-6">
-            <img src="images/ui (5).jpg" style="width:100%">
+            <img src="images/Rebong Bakery's Website UI Design_page-0004.jpg" style="width:100%">
             </div>
-            <div class="col-sm-6">
-            <img src="images/ui (6).jpg" style="width:100%">
+            <div class="col-sm-6" data-aos="zoom-in">
+            <img src="images/Rebong Bakery's Website UI Design_page-0003.jpg" style="width:100%">
             </div>
         </div>
         <div class="row" data-aos="zoom-in">
-        <div class="col-sm-6" style="padding-bottom: 5%;">
-            <img src="images/ui (7).jpg" style="width:100%">
+            <div class="col-sm-6">
+            <img src="images/Rebong Bakery's Website UI Design_page-0005.jpg" style="width:100%">
+            </div>
+            <div class="col-sm-6">
+            <img src="" style="width:100%">
+            </div>
         </div>
+        <div></div>
+        <div class="row" data-aos="zoom-in">
+          <div class="col-sm-6" style="padding-bottom: 5%;">
+              <!--img src="images/ui (7).jpg" style="width:100%"-->
+          </div>
         </div>
         <div class="row" data-aos="zoom-in">
         <div>
