--- a/acproject1.html
+++ b/acproject1.html
@@ -72,7 +72,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6 ml-auto mr-auto">
-          <div class="h4 text-center mb-4 title">UI/UX Project</div>
+          <div class="h4 text-center mb-4 title">Academic Projects</div>
         </div>
       </div>
       <div class="row">
@@ -80,8 +80,8 @@
           <img src="images/cover academic projects.png">
         </div>
         <div class="col-sm-9">
-          <p><a href="acproject.html" style="padding-top: 20px;">OrganizeMe : To-Do List</a></p>
-          <p>Introducing OrganizeMe, the ultimate to-do list application designed for busy individuals who need to stay organized and on top of their tasks. OrganizeMe allows you to effortlessly create and manage your to-do lists, ensuring you never miss a task or deadline again. Whether you need to plan for today or schedule tasks for the future, OrganizeMe has got you covered.</p>
+          <p><a href="acproject.html" style="padding-top: 20px;">Title: The Development of Rebong Bakery Ordering System (Final Year Project) (2022)</a></p>
+          <p>The development of the Rebong Bakery Ordering System was my final year project while pursuing my degree, which I completed towards the end of 2022. This website streamlines bakery operations by allowing customers to browse products, check availability, and place orders in advance, eliminating the need for in-person visits. It also includes an admin interface for managing inventory, adding new products, and updating stock levels. This project enhanced my skills in web development, database management, and system design, providing practical experience in creating user-centric e-commerce solutions tailored to real-world business needs.</p>
         </div>
       </div>
       <div class="row">
