--- a/acproject.html
+++ b/acproject.html
@@ -138,6 +138,7 @@ pricing, and computation of the total cost, inclusive of taxes and shipping fees
               <!--img src="images/ui (7).jpg" style="width:100%"-->
           </div>
         </div>
+        <div class="section"></div>
         <div class="row" data-aos="zoom-in">
         <div>
             <h6>Conclusion</h6>
