--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                   <figure class="cc-effect">
                     <img src="images/cover uiux.png" alt="Image"/>
                     <figcaption>
-                      <p>UI/UX Project</p>
+                      <p>UI/UX Projects</p>
                     </figcaption>
                   </figure>
                 </a>
