--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <div class="h4 mt-0 title">Basic Information</div>
             <div class="row">
               <div class="col-sm-4"><strong class="text-uppercase">Age:</strong></div>
-              <div class="col-sm-8">24</div>
+              <div class="col-sm-8">25</div>
             </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Email:</strong></div>
@@ -325,32 +325,27 @@
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body cc-experience-header">
-            <p>August 2023 - Present</p>
+            <p>August 2023 - April 2025</p>
             <div class="h5">Stearex International</div>
           </div>
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
-            <div class="h5">Production Operator</div>
+            <div class="h5">Marketing Executive</div>
             <p>
               <ul>
                 <li>
-                  Overseeing the operation of production equipment throughout the manufacturing process to back-fill.
+                  Strategically planned and executed social media campaigns to promote the product and successfully achieving and
+exceeding target follower growth by 65% within a year.
                 </li>
                 <li>
-                  Improving operations by diligently maintaining safety and quality standards.
+                  Created engaging visual and written content (posts, reels, stories) to boost brand awareness and audience engagement.
                 </li>
                 <li>
-                  Planning and coordinating position requirements, schedules, and production team processes.
+                  Implementing targeted social media ads, resulting in 40% increase in leads/sales.
                 </li>
                 <li>
-                  Conducting quality control checks before, during, and after producing each product to meet the specified requirements.
-                </li>
-                <li>
-                  Strategically planned and executed social media campaigns to promote the product and successfully achieving and exceeding target follower growth by 65%.
-                </li>
-                <li>
-                  Successfully completed 70% of production targets over a period, ensuring timely delivery and adherence to quality standards.
+                  Analyzing insights using Meta Business Suite & Google Analytics to refine strategies and improve campaign effectiveness.
                 </li>
               </ul>
             </p>
