--- a/index.html
+++ b/index.html
@@ -321,6 +321,29 @@
 <div class="section" id="experience">
   <div class="container cc-experience">
     <div class="h4 text-center mb-4 title">Work Experience</div>
+    <div class="card"> <!--AAT-->
+      <div class="row">
+        <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body cc-experience-header">
+            <p>April 2025 - Present</p>
+            <div class="h5">Advanced Air Traffic System</div>
+          </div>
+        </div>
+        <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body">
+            <div class="h5">Protege - Cybersecurity Engineer</div>
+            <p>
+              <ul>
+                <li>
+                  Strategically planned and executed social media campaigns to promote the product and successfully achieving and
+exceeding target follower growth by 65% within a year.
+                </li>
+              </ul>
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
     <div class="card"> <!--Stearex International-->
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
