--- a/index.html
+++ b/index.html
@@ -331,12 +331,11 @@
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
-            <div class="h5">Protege - Cybersecurity Engineer</div>
+            <div class="h5">PROTÉGÉ - Cybersecurity Engineer</div>
             <p>
               <ul>
                 <li>
-                  Strategically planned and executed social media campaigns to promote the product and successfully achieving and
-exceeding target follower growth by 65% within a year.
+                  
                 </li>
               </ul>
             </p>
