--- a/index.html
+++ b/index.html
@@ -237,15 +237,15 @@
                 </a>
               </div>
             </div>
-            <!--div class="col-6 col-md-4">
+            <div class="col-6 col-md-4">
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#web-development">
                   <figure class="cc-effect"><img src="images/cover uiux.png" alt="Image"/>
                     <figcaption>
-                      <p>Web Development</p>
+                      <p>Graphic Design</p>
                     </figcaption>
                   </figure></a>
               </div>
-            </div-->
+            </div>
           </div>
         </div>
       </div>
