--- a/index.html
+++ b/index.html
@@ -214,6 +214,7 @@
         <div class="ml-auto mr-auto">
           <div class="h4 text-center mb-4 title">Project</div>
           <div class="row">
+            <!--button to next page-->
             <div class="col-6 col-md-4">
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
                 <a href="uiux.html#uiux">
@@ -228,7 +229,7 @@
             </div>
             <div class="col-6 col-md-4" >
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
-                <a href="acproject1.html">
+                <a href="acproject1.html#ap">
                   <figure class="cc-effect"><img src="images/cover academic projects.png" alt="Image"/>
                     <figcaption>
                       <p>Academic Projects</p>
@@ -239,11 +240,13 @@
             </div>
             <div class="col-6 col-md-4">
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#web-development">
+                <a href="">  
                   <figure class="cc-effect"><img src="images/cover uiux.png" alt="Image"/>
                     <figcaption>
                       <p>Graphic Design</p>
                     </figcaption>
-                  </figure></a>
+                  </figure>
+                </a>
               </div>
             </div>
           </div>
