--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+g<!DOCTYPE html>
 <html lang="en-US">
   <head>
     <meta charset="UTF-8">
@@ -240,7 +240,7 @@
             </div>
             <div class="col-6 col-md-4">
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#web-development">
-                <a href="">  
+                <a href="design.html#design">  
                   <figure class="cc-effect"><img src="images/cover uiux.png" alt="Image"/>
                     <figcaption>
                       <p>Graphic Design</p>
