--- a/design.html
+++ b/design.html
@@ -75,13 +75,31 @@
           <div class="h4 text-center mb-4 title">Design</div>
         </div>
       </div>
-      <div class="row">
-        <div class="col-sm-2">
-          <img src="images/cover uiux.png">
-        </div>
-        <div class="col-sm-9">
-          <p><a href="uiux1.html#uiux" style="padding-top: 20px;">OrganizeMe : To-Do List</a></p>
-          <p>Introducing OrganizeMe, the ultimate to-do list application designed for busy individuals who need to stay organized and on top of their tasks. OrganizeMe allows you to effortlessly create and manage your to-do lists, ensuring you never miss a task or deadline again. Whether you need to plan for today or schedule tasks for the future, OrganizeMe has got you covered.</p>
+      <div class="tab-pane" id="graphic-design" role="tabpanel"> <!--Graphic Design Class-->
+        <div class="container">
+          <div class="h4 text-center mb-4 title">Graphic Design</div>
+          <div class="row">
+            <div class="column">
+              <img src="images/photo_2024-06-03_19-50-33.jpg" alt="Snow" style="width:100%">
+            </div>
+            <div class="column">
+              <img src="images/photo_2024-06-03_19-50-20.jpg" alt="Forest" style="width:100%">
+            </div>
+            <div class="column">
+              <img src="images/photo_2024-06-03_19-50-26.jpg" alt="Mountains" style="width:100%">
+            </div>
+          </div>
+          <div class="row">
+            <div class="column">
+              <img src="images/photo_2024-06-03_19-50-28.jpg" alt="Snow" style="width:100%">
+            </div>
+            <div class="column">
+              <img src="images/photo_2024-06-03_19-50-36.jpg" alt="Forest" style="width:100%">
+            </div>
+            <div class="column">
+              <img src="images/photo_2024-06-03_19-50-17.jpg" alt="Mountains" style="width:100%">
+            </div>
+          </div>
         </div>
       </div>
       <div class="row">
