--- a/design.html
+++ b/design.html
@@ -79,7 +79,7 @@
         <div class="container">
           <div class="row">
             <div class="column">
-              <img src="images/photo_2024-06-03_19-50-33.jpg" alt="Snow" style="width:100%">
+              <img src="images/1_20250417_151142_0000.png" alt="Snow" style="width:100%">
             </div>
             <div class="column">
               <img src="images/photo_2024-06-03_19-50-20.jpg" alt="Forest" style="width:100%">
