--- a/design.html
+++ b/design.html
@@ -73,6 +73,7 @@
       <div class="row">
         <div class="col-md-6 ml-auto mr-auto">
           <div class="h4 text-center mb-4 title">Design</div>
+          <div class="h4 text-center mb-4 title">Packaging</div>
         </div>
       </div>
       <div class="tab-pane" id="graphic-design" role="tabpanel"> <!--Graphic Design Class-->
