--- a/design.html
+++ b/design.html
@@ -80,13 +80,13 @@
         <div class="container">
           <div class="row">
             <div class="column">
-              <img src="images/1_20250417_151142_0000.png" alt="Snow" style="width:100%">
+              <img src="images/Muruku Original_20250417_151545_0000.png" alt="original" style="width:100%">
             </div>
             <div class="column">
-              <img src="images/photo_2024-06-03_19-50-20.jpg" alt="Forest" style="width:100%">
+              <img src="images/CHEESE 1_20250417_151545_0001.png" alt="cheese" style="width:100%">
             </div>
             <div class="column">
-              <img src="images/photo_2024-06-03_19-50-26.jpg" alt="Mountains" style="width:100%">
+              <img src="images/SALTED EGG_20250417_151545_0002.png" alt="salted egg" style="width:100%">
             </div>
           </div>
           <div class="row">
