--- a/design.html
+++ b/design.html
@@ -103,8 +103,8 @@
         </div>
       </div>
       <div class="row">
-        <div class="column">
-          <!--img src="images/ui (2).jpg" style="width:100%"-->
+        <div class="col-md-6 ml-auto mr-auto">
+          <div class="h4 text-center mb-4 title">Poster</div>
         </div>
       </div>
     </div>
