--- a/design.html
+++ b/design.html
@@ -89,22 +89,26 @@
               <img src="images/SALTED EGG_20250417_151545_0002.png" alt="salted egg" style="width:100%">
             </div>
           </div>
-          <div class="row">
-            <div class="column">
-              <img src="images/photo_2024-06-03_19-50-28.jpg" alt="Snow" style="width:100%">
-            </div>
-            <div class="column">
-              <img src="images/photo_2024-06-03_19-50-36.jpg" alt="Forest" style="width:100%">
-            </div>
-            <div class="column">
-              <img src="images/photo_2024-06-03_19-50-17.jpg" alt="Mountains" style="width:100%">
-            </div>
-          </div>
         </div>
       </div>
       <div class="row">
         <div class="col-md-6 ml-auto mr-auto">
           <div class="h4 text-center mb-4 title">Poster</div>
+        </div>
+      </div>
+      <div class="tab-pane" id="graphic-design" role="tabpanel"> <!--Graphic Design Class-->
+        <div class="container">
+          <div class="row">
+            <div class="column">
+              <img src="images/Muruku Original_20250417_151545_0000.png" alt="original" style="width:100%">
+            </div>
+            <div class="column">
+              <img src="images/CHEESE 1_20250417_151545_0001.png" alt="cheese" style="width:100%">
+            </div>
+            <div class="column">
+              <img src="images/SALTED EGG_20250417_151545_0002.png" alt="salted egg" style="width:100%">
+            </div>
+          </div>
         </div>
       </div>
     </div>
