--- a/design.html
+++ b/design.html
@@ -100,13 +100,13 @@
         <div class="container">
           <div class="row">
             <div class="column">
-              <img src="images/Muruku Original_20250417_151545_0000.png" alt="original" style="width:100%">
+              <img src="images/1_20250417_151142_0000.png" alt="original" style="width:100%">
             </div>
             <div class="column">
-              <img src="images/CHEESE 1_20250417_151545_0001.png" alt="cheese" style="width:100%">
+              <img src="images/2_20250417_151142_0001.png" alt="cheese" style="width:100%">
             </div>
             <div class="column">
-              <img src="images/SALTED EGG_20250417_151545_0002.png" alt="salted egg" style="width:100%">
+              <img src="images/3_20250417_151142_0002.png" alt="salted egg" style="width:100%">
             </div>
           </div>
         </div>
