--- a/design.html
+++ b/design.html
@@ -110,6 +110,19 @@
             </div>
           </div>
         </div>
+        <div class="container">
+          <div class="row">
+            <div class="column">
+              <img src="images/IG - Poster Chilli Oil_20250417_151404_0000.png" alt="chilli oil" style="width:100%">
+            </div>
+            <div class="column">
+              <img src="images/IG - Poster Chilli Oil_20250417_151404_0001.png" alt="kemangi" style="width:100%">
+            </div>
+            <div class="column">
+              <img src="images/IG - Poster Chilli Oil_20250417_151404_0002.png" alt="nanas" style="width:100%">
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
