--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
           </div>
         </div>
       </div>
-      <div class="tab-pane" id="graphic-design" role="tabpanel"> <!--Graphic Design Class-->
+      <!--div class="tab-pane" id="graphic-design" role="tabpanel"> <!--Graphic Design Class>
         <div class="container">
           <div class="h4 text-center mb-4 title">Graphic Design</div>
           <div class="row">
@@ -278,7 +278,7 @@
             </div>
           </div>
         </div>
-      </div>
+    </div-->
       <div class="tab-pane" class="photography" id="Photography" role="tabpanel"> <!--Photography Class-->
         <div class="ml-auto mr-auto">
           <div class="h4 text-center mb-4 title">Photography</div>
