--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
           <div class="h4 text-center mb-4 title">Photography</div>
           <div class="row">
             <div class="col-6 col-md-4">
-              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="Photography.html">
+              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="Photography.html#photography">
                   <figure class="cc-effect"><img src="images/photo_2024-06-03_19-50-28.jpg" alt="Image"/>
                     <figcaption>
                       <p>Photography</p>
