--- a/Photography.html
+++ b/Photography.html
@@ -72,12 +72,12 @@
       <div class="col-md-6 ml-auto mr-auto">
         <div class="h4 text-center mb-4 title">Portfolio</div>
         <div class="nav-align-center">
-          <ul class="nav nav-pills nav-pills-primary" role="tablist">
+          <!--ul class="nav nav-pills nav-pills-primary" role="tablist">
             <li class="nav-item"><a class="nav-link active" href="index.html#web-development" rel="tooltip" title="Project" role="tablist"><i class="fa fa-laptop" aria-hidden="true"></i></a></li>
             <li class="nav-item"><a class="nav-link"  href="index.html#graphic-design" rel="tooltip" title="Design" role="tablist"><i class="fa fa-picture-o" aria-hidden="true"></i></a></li>
             <li class="nav-item"><a class="nav-link"   href="index.html#Photography" rel="tooltip" title="Photography" role="tablist"><i class="fa fa-camera" aria-hidden="true"></i></a></li>
             
-          </ul>
+        </ul-->
         </div>
         <div class="h4 text-center mb-4 title">Photography</div>
       </div>
