--- a/Photography.html
+++ b/Photography.html
@@ -104,6 +104,17 @@
         <img src="images/photo_2024-06-03_19-50-17.jpg" alt="Mountains" style="width:100%">
       </div>
     </div>
+    <div class="row">
+      <div class="column">
+        <img src="images/IMG_20250418_0001.heic" alt="Snow" style="width:100%">
+      </div>
+      <div class="column">
+        <img src="images/photo_2024-06-03_19-50-36.jpg" alt="Forest" style="width:100%">
+      </div>
+      <div class="column">
+        <img src="images/photo_2024-06-03_19-50-17.jpg" alt="Mountains" style="width:100%">
+      </div>
+    </div>
   </div>
 </div>
 
