--- a/index.html
+++ b/index.html
@@ -338,7 +338,13 @@
             <p>
               <ul>
                 <li>
-                  
+                  Responsible for monitoring security alerts, analyzing logs for abnormalities, and identifying potential threats using a Security Information and Event Management (SIEM) system such as Wazuh and Barracuda.
+                </li>
+                <li>
+                  Log, track, and update incident tickets to ensure accurate documentation and timely resolution.
+                </li>
+                <li>
+                  Deploy and manage BookStack for live documentation, including installation, and configuration.
                 </li>
               </ul>
             </p>
