--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="col-lg-6 col-md-12">
           <div class="card-body">
             <div class="h4 mt-0 title">About</div>
-            <p>Motivated and detail-oriented fresh graduate with a bachelor's degree in Information Systems Engineering, seeking to launch a career as a front-end developer. Passionate about creating user-friendly, visually appealing, and responsive web interfaces using modern technologies. Committed to continuous learning, contributing to innovative projects, and delivering high-quality solutions that enhance user experiences. Looking for opportunities to grow professionally within a dynamic and collaborative environment.</p>
+            <p>Motivated and detail-oriented Information Systems Engineering graduate with a strong foundation in technology, problem-solving, and critical thinking. Eager to contribute analytical, technical, and communication skills in a dynamic environment. Committed to continuous growth and delivering meaningful impact across diverse roles, whether in technology, operations, digital solutions, or cross-functional support.</p>
             <p></p>
           </div>
         </div>
@@ -329,7 +329,7 @@
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body cc-experience-header">
             <p>April 2025 - Present</p>
-            <div class="h5">Advanced Air Traffic System</div>
+            <div class="h5">Advanced Air Traffic System (M)</div>
           </div>
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
@@ -345,6 +345,9 @@
                 </li>
                 <li>
                   Deploy and manage BookStack for live documentation, including installation, and configuration.
+                </li>
+                <li>
+                  Assisted in setting up the Security Operations Center (SOC) room by installing monitors and activating Microsoft accounts for analyst workstations.
                 </li>
               </ul>
             </p>
@@ -440,7 +443,7 @@ exceeding target follower growth by 65% within a year.
         </div>
       </div>
     </div>
-    <div class="card"> <!--NT Shop-->
+    <!--div class="card"> <!--NT Shop>
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body cc-experience-header">
@@ -463,7 +466,7 @@ exceeding target follower growth by 65% within a year.
             </p>
           </div>
         </div>
-      </div>
+      </div-->
     </div>
   </div>
 </div>
@@ -515,7 +518,7 @@ exceeding target follower growth by 65% within a year.
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body cc-education-header">
-            <p>2007 - 2009</p>
+            <p>2013 - 2017</p>
             <div class="h5">High School</div>
           </div>
         </div>
