--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="content-center">
           <div class="cc-profile-image"><a href="#"><img src="images/photo_2023-10-12_14-56-14.jpg" alt="Image"/></a></div>
           <div class="h2 title">Alya Maisarah</div>
-          <p class="category text-white">Front-End Developer</p>
+          <p class="category text-white">SOC L1</p>
           <a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Contact Me</a>
           <a class="btn btn-primary" href="images/RESUME ALYA MAISARAH ABDUL RAZAK.pdf" rel="tooltip" title="Download" data-aos="zoom-in" data-aos-anchor="data-aos-anchor" download="RESUME_ALYA MAISARAH ABDUL RAZAK">Resume</a>
         </div>
