--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <div class="h2 title">Alya Maisarah</div>
           <p class="category text-white">SOC L1</p>
           <a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Contact Me</a>
-          <a class="btn btn-primary" href="images/RESUME ALYA MAISARAH ABDUL RAZAK.pdf" rel="tooltip" title="Download" data-aos="zoom-in" data-aos-anchor="data-aos-anchor" download="ALYA MAISARAH ABDUL RAZAK">Resume</a>
+          <a class="btn btn-primary" href="images/ALYA MAISARAH ABDUL RAZAK.pdf" rel="tooltip" title="Download" data-aos="zoom-in" data-aos-anchor="data-aos-anchor" download="ALYA MAISARAH ABDUL RAZAK">Resume</a>
         </div>
       </div>
       <div class="section">
