--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
             <div class="col-6 col-md-4">
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#web-development">
                 <a href="design.html#design">  
-                  <figure class="cc-effect"><img src="images/Screenshot 2025-07-23 142210" alt="Image"/>
+                  <figure class="cc-effect"><img src="images/Screenshot 2025-07-23 142210.png" alt="Image"/>
                     <figcaption>
                       <p>Graphic Design</p>
                     </figcaption>
